src/objects/Common_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BHAT_Update_End_Date__c</fullName>
        <label>BHAT Update End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BHAT_Update_Start_Date__c</fullName>
        <label>BHAT Update Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_Login_for_BAR__c</fullName>
        <label>Exclude Login for BAR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HospitalCode__c</fullName>
        <description>Access for for uhw.force.com/HospitalRouteList</description>
        <label>HospitalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KaiserCode__c</fullName>
        <description>Access code for uhw.force.com/KaiserRouteList</description>
        <label>KaiserCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KrlEboardExceptions__c</fullName>
        <description>Kaiser Route List Seats codes that are exceptions, meaning they appear on the Eboard tab for individual management.</description>
        <label>KrlEboardExceptions</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Common Settings</label>
</CustomObject>